# solana-cross-margin-settlement

./: Anchor.toml  DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md
programs/solana-cross-margin-settlement/: Cargo.toml
programs/solana-cross-margin-settlement/src/: lib.rs
programs/solana-cross-margin-settlement/tests/: settlement_tests.rs
tests/: settlement_tests.rs
