[package]
name = "solana-cross-margin-settlement"
version = "0.1.0"
description = "Cross-margin settlement for Solana derivatives DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_cross_margin_settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
